--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.0.0
 anyio==3.6.2
 appnope==0.1.3
 argon2-cffi==21.3.0
@@ -5,6 +6,7 @@ argon2-cffi-bindings==21.2.0
 arrow==1.2.3
 asgiref==3.7.2
 asttokens==2.2.1
+astunparse==1.6.3
 attrs==22.2.0
 awsebcli==3.20.7
 backcall==0.2.0
@@ -16,6 +18,7 @@ botocore==1.29.158
 build==1.0.3
 CacheControl==0.13.1
 cached-property==1.5.2
+cachetools==5.3.2
 cement==2.8.2
 certifi==2023.11.17
 cffi==1.15.1
@@ -32,8 +35,10 @@ decorator==5.1.1
 defusedxml==0.7.1
 distlib==0.3.7
 Django==4.2.7
+django-storages==1.14.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+dm-tree==0.1.8
 docker==4.4.4
 docker-compose==1.25.5
 dockerpty==0.4.1
@@ -44,8 +49,15 @@ executing==1.2.0
 fastapi==0.88.0
 fastjsonschema==2.19.0
 filelock==3.13.1
+flatbuffers==23.5.26
 fonttools==4.39.2
 fqdn==1.5.1
+gast==0.5.4
+google-auth==2.24.0
+google-auth-oauthlib==1.1.0
+google-pasta==0.2.0
+grpcio==1.59.3
+h5py==3.10.0
 idna==3.4
 importlib-metadata==6.8.0
 installer==0.7.0
@@ -70,15 +82,22 @@ jupyter_server==2.5.0
 jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.5
+keras==2.15.0
 keyring==24.3.0
 kiwisolver==1.4.4
+libclang==16.0.6
+Markdown==3.5.1
+markdown-it-py==3.0.0
 MarkupSafe==2.1.2
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 mistune==2.0.5
+ml-dtypes==0.2.0
 more-itertools==10.1.0
 msgpack==1.0.7
 mysqlclient==2.2.0
+namex==0.0.7
 nbclassic==0.5.3
 nbclient==0.7.2
 nbconvert==7.2.10
@@ -87,7 +106,9 @@ nest-asyncio==1.5.6
 notebook==6.5.3
 notebook_shim==0.2.2
 numpy==1.26.0
+oauthlib==3.2.2
 openpyxl==3.1.2
+opt-einsum==3.3.0
 packaging==23.0
 pandas==1.5.3
 pandocfilters==1.5.0
@@ -105,9 +126,12 @@ poetry-core==1.8.1
 poetry-plugin-export==1.6.0
 prometheus-client==0.16.0
 prompt-toolkit==3.0.38
+protobuf==4.23.4
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
 pycparser==2.21
 pydantic==1.10.2
 pygame==2.1.2
@@ -127,9 +151,12 @@ qtconsole==5.4.1
 QtPy==2.3.0
 rapidfuzz==3.5.2
 requests==2.31.0
+requests-oauthlib==1.3.1
 requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.7.0
+rsa==4.9
 scikit-learn==1.3.2
 scipy==1.11.3
 seaborn==0.13.0
@@ -144,6 +171,12 @@ sqlparse==0.4.4
 stack-data==0.6.2
 starlette==0.22.0
 statsmodels==0.14.0
+tensorboard==2.15.1
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-io-gcs-filesystem==0.34.0
+tensorflow-macos==2.15.0
 termcolor==1.1.0
 terminado==0.17.1
 texttable==1.6.7
@@ -162,6 +195,8 @@ wcwidth==0.1.9
 webcolors==1.12
 webencodings==0.5.1
 websocket-client==0.59.0
+Werkzeug==3.0.1
 widgetsnbextension==4.0.5
+wrapt==1.14.1
 xattr==0.10.1
 zipp==3.17.0
