--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,5 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij
+
+secret_settings.py
