--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ defusedxml==0.7.1
 distlib==0.3.7
 Django==4.2.7
 django-cors-headers==4.3.1
+django-filter==23.5
 django-storages==1.14.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
